--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/index.jpg
 email: kurumi.zsy@gmail.com
 description: "青春如遊戲，只是不能再讀檔"
 keyword: "Otone, Otone Blog, 前端, 动漫, 游戏"
-url: "http://FujishiroOtone.github.io"          # your host, for absolute URL
+url: "http://chen-si-tong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/FujishiroOtone/FujishiroOtone.github.io" # you code repository
+github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
 home_repo: "http://fujishiro.cn"
 
 # Sidebar settings
@@ -21,7 +21,7 @@ sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used i
 RSS: false
 weibo_username:     _Otone
 #zhihu_username:     
-github_username:    FujishiroOtone
+github_username:    chen-si-tong
 #facebook_username: 
 jianshu_username:  3bf62aac1afc
 twitter_username:   osuHatsuneMiku
@@ -101,7 +101,7 @@ service-worker: true
 links: [
     {
         title: "个人のGitHub",
-        href: "https://github.com/FujishiroOtone	"
+        href: "https://github.com/chen-si-tong	"
     },{
         title: "简书·Otone",
         href: "https://www.jianshu.com/u/3bf62aac1afc"
