--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Fujishiro Otone
+title: Social data analysis and visualization
 SEOTitle: Otoneの小屋
-header-img: img/index.jpg
-email: kurumi.zsy@gmail.com
-description: "青春如遊戲，只是不能再讀檔"
+header-img: img/nasa.jpg
+email: stone.sitong.chen@outlook.com
+description: 02806
 keyword: "Otone, Otone Blog, 前端, 动漫, 游戏"
 url: "http://chen-si-tong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
-home_repo: "http://fujishiro.cn"
+
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -19,12 +19,12 @@ sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used i
 
 # SNS settings
 RSS: false
-weibo_username:     _Otone
+weibo_username:     
 #zhihu_username:     
 github_username:    chen-si-tong
 #facebook_username: 
-jianshu_username:  3bf62aac1afc
-twitter_username:   osuHatsuneMiku
+jianshu_username:  
+twitter_username:  
 
 
 
@@ -60,15 +60,7 @@ kramdown:
 # Disqus（https://disqus.com/）
 # disqus_username: otone
 
-# Gitalk
-gitalk:
-  enable: true    #是否开启Gitalk评论
-  clientID: 1628acd4584b56ed9b40                            #生成的clientID
-  clientSecret: 16b70af1ac573e1609bb84a604b4504a18cf7bcd    #生成的clientSecret
-  repo: FujishiroOtone.github.io    #仓库名称
-  owner: FujishiroOtone    #github用户名
-  admin: FujishiroOtone
-  distractionFreeMode: true #是否启用类似FB的阴影遮罩
+
 
 
 # 统计
@@ -79,14 +71,14 @@ gitalk:
 
 # Google Analytics
 ga_track_id: 'UA-124497414-1'            # Format: UA-xxxxxx-xx
-ga_domain: blog.fujishiro.cn               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: auto            # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
 
 
 # Featured Tags
-featured-tags: true                     # 是否使用首页标签
+featured-tags: flase                    # 是否使用首页标签
 featured-condition-size: 0             # 相同标签数量大于这个数，才会出现在首页
 
 
@@ -97,25 +89,3 @@ service-worker: true
 
 
 
-# links
-links: [
-    {
-        title: "个人のGitHub",
-        href: "https://github.com/chen-si-tong	"
-    },{
-        title: "简书·Otone",
-        href: "https://www.jianshu.com/u/3bf62aac1afc"
-    },{
-        title: "Twitter",
-        href: "https://twitter.com/osuHatsuneMiku"
-    },{
-        title: "个人のbilibili",
-        href: "https://space.bilibili.com/1880573/#/"
-    },{
-        title: "asdfv1929",
-        href: "https://asdfv1929.github.io/"
-    },{
-        title: "月小水长",
-        href: "https://inspurer.github.io/"
-    }
-]
