--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Social data analysis and visualization
-SEOTitle: Otoneの小屋
+SEOTitle: 
 header-img: img/nasa.jpg
 email: stone.sitong.chen@outlook.com
 description: 02806
-keyword: "Otone, Otone Blog, 前端, 动漫, 游戏"
+keyword:
 url: "http://chen-si-tong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
