--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code
 
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "大切な人といつかまた巡り会えますように"
-sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+#sidebar: true                           # whether or not using Sidebar.
+#sidebar-about-description: "大切な人といつかまた巡り会えますように"
+#sidebar-avatar: /img/about-Otone.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
@@ -34,7 +34,7 @@ twitter_username:
 permalink: pretty
 paginate: 10
 exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+anchorjs: flase                        # if you want to customize anchor. check out line:181 of `post.html`
 
 
 
@@ -85,7 +85,7 @@ featured-condition-size: 0             # 相同标签数量大于这个数，才
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
-service-worker: true
+service-worker: flase
 
 
 
