--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: Assignment 2
 header-img: img/nasa.jpg
 email: stone.sitong.chen@outlook.com
 description: 02806
-keyword:
+keyword: 02806
 url: "http://chen-si-tong.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
