--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/nasa.jpg
 email: stone.sitong.chen@outlook.com
 description: 02806
 keyword: 02806
-url: "http://chen-si-tong.github.io"          # your host, for absolute URL
+url: "http://Alpiexta.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
 
