--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Social data analysis and visualization
 SEOTitle: Assignment 2
 header-img: img/nasa.jpg
 email: stone.sitong.chen@outlook.com
+       alpiexta@gmail.com
 description: 02806
 keyword: 02806
 url: "http://Alpiexta.github.io"          # your host, for absolute URL
