--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@
 title: Social data analysis and visualization
 SEOTitle: Assignment 2
 header-img: img/nasa.jpg
-email: stone.sitong.chen@outlook.com
-       alpiexta@gmail.com
+email: s220054@dtu.dk
+       s230265@dtu.dk
+       s230027@dtu.dk
 description: 02806
 keyword: 02806
 url: "http://Alpiexta.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/chen-si-tong/chen-si-tong.github.io" # you code repository
+github_repo: "https://github.com/Alpiexta/Alpiexta.github.io" # you code repository
 
 
 # Sidebar settings
@@ -22,7 +23,7 @@ sidebar-avatar:      # use absolute URL, seeing it's used in both `/` and `/abou
 RSS: false
 weibo_username:     
 #zhihu_username:     
-github_username:    chen-si-tong
+github_username:    Alpiexta
 #facebook_username: 
 jianshu_username:  
 twitter_username:  
