--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: Social data analysis and visualization
 SEOTitle: Assignment 2
 header-img: img/nasa.jpg
-email: s220054@dtu.dk
+email: 
+       s220054@dtu.dk
        s230265@dtu.dk
        s230027@dtu.dk
 description: 02806
